@@ -25,7 +25,6 @@
 * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 */
 
-#include <stdio.h>     /* for fprintf() */
 #include <stdlib.h>    /* for atoi() */
 #include <string.h>    /* for strchr() */
 #include <sys/wait.h>  /* for waitpid() */
